chore:Algorithm brut force tested